--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-dash
-dash-bootstrap-components
-pandas
-plotly
-networkx
-numpy
-scipy
-biopython
-matplotlib
-scikit-learn
-openpyxl
-statsmodels
-gprofiler-official
-kaleido
+dash==2.14.2
+dash-bootstrap-components==1.5.0
+pandas==1.5.3
+numpy==1.23.5
+plotly==5.15.0
+scipy==1.10.1
+scikit-learn==1.2.2
+openpyxl==3.1.2
+gprofiler-official==1.0.0
+kaleido==0.2.1
