--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: degeneromics
+    name: degeneromic
     env: python
     buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
     startCommand: "python app.py"
